[AGAA] 09_03 finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/09_02.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_02.html
@@ -161,7 +161,7 @@ Given \(\cos (-x) = \cos x\) and \(\sin -x = - \sin x\), then:
 </p>
 
 \begin{align}
-= \sin A\cos B + \cos A -\sin B
+= \sin A\cos B - \cos A \sin B
 \end{align}
 
 <p>
