--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -139,6 +139,9 @@ Trigonometric Identities and Equations.
 </li><li>
 <a href="09_02.html">Sum and Difference Identities</a>
 
+</li><li>
+<a href="09_03.html">Further Identities</a>
+
 </li></ol>
 </li></ol>
 </div>
