[RTGW] Update 03 [skip ci]

--- a/src/Notes/ComputerScience/CG/RTGW/03.html
+++ b/src/Notes/ComputerScience/CG/RTGW/03.html
@@ -41,7 +41,7 @@
 <div id="Contents" class="toc"><h2 id="Contents" class="header"><a href="#Contents">Contents</a></h2></div>
 <ul>
 <li>
-<a href="03.html#Positional Versus Directional Lights">Positional Versus Directional Lights</a>
+<a href="03.html#Positional%20Versus%20Directional%20Lights">Positional Versus Directional Lights</a>
 
 </li><li>
 <a href="03.html#Normals">Normals</a>
@@ -50,74 +50,65 @@
 <a href="03.html#Materials">Materials</a>
 
 </li><li>
-<a href="03.html#Using Lights, Normals, and Materials in the Pipeline">Using Lights, Normals, and Materials in the Pipeline</a>
+<a href="03.html#Using%20Lights%2C%20Normals%2C%20and%20Materials%20in%20the%20Pipeline">Using Lights  Normals  and Materials in the Pipeline</a>
 
 </li><li>
-<a href="03.html#Parallelism and the Difference Between Attributes and Uniforms">Parallelism and the Difference Between Attributes and Uniforms</a>
+<a href="03.html#Parallelism%20and%20the%20Difference%20Between%20Attributes%20and%20Uniforms">Parallelism and the Difference Between Attributes and Uniforms</a>
 
 </li><li>
-<a href="03.html#Shading Methods and Light-Reflection Models">Shading Methods and Light-Reflection Models</a>
-
-<ul>
-<li>
-<a href="03.html#Shading/Interpolation Methods">Shading/Interpolation Methods</a>
-
-<ul>
-<li>
-<a href="03.html#Goraud Versus Phong Shading">Goraud Versus Phong Shading</a>
-
-</li></ul>
-</li><li>
-<a href="03.html#Light-Reflection Models">Light-Reflection Models</a>
-
-<ul>
-<li>
-<a href="03.html#Lambertian Reflection Model">Lambertian Reflection Model</a>
+<a href="03.html#Shading%20Methods%20and%20Light-Reflection%20Models">Shading Methods and Light-Reflection Models</a>
 
 </li><li>
-<a href="03.html#Phong Reflection Model">Phong Reflection Model</a>
+<a href="03.html#Shading%2FInterpolation%20Methods">Shading Interpolation Methods</a>
 
-</li></ul>
+</li><li>
+<a href="03.html#Goraud%20Versus%20Phong%20Shading">Goraud Versus Phong Shading</a>
+
+</li><li>
+<a href="03.html#Light-Reflection%20Models">Light-Reflection Models</a>
+
+</li><li>
+<a href="03.html#Lambertian%20Reflection%20Model">Lambertian Reflection Model</a>
+
+</li><li>
+<a href="03.html#Phong%20Reflection%20Model">Phong Reflection Model</a>
+
 </li><li>
 <a href="03.html#Summary">Summary</a>
 
-</li></ul>
 </li><li>
-<a href="03.html#OpenGL ES Shading Language (ESSL)">OpenGL ES Shading Language (ESSL)</a>
+<a href="03.html#OpenGL%20ES%20Shading%20Language%20%28ESSL%29">OpenGL ES Shading Language  ESSL</a>
 
-<ul>
-<li>
-<a href="03.html#Storage Qualifier">Storage Qualifier</a>
+</li><li>
+<a href="03.html#Storage%20Qualifier">Storage Qualifier</a>
 
 </li><li>
 <a href="03.html#Types">Types</a>
 
 </li><li>
-<a href="03.html#Vector Components">Vector Components</a>
+<a href="03.html#Vector%20Components">Vector Components</a>
 
 </li><li>
-<a href="03.html#Operators and Functions">Operators and Functions</a>
-
-</li></ul>
-</li><li>
-<a href="03.html#Goraud Shading in Practice">Goraud Shading in Practice</a>
-
-<ul>
-<li>
-<a href="03.html#With Phong Reflection Model">With Phong Reflection Model</a>
-
-<ul>
-<li>
-<a href="03.html#Vertex Shader">Vertex Shader</a>
+<a href="03.html#Operators%20and%20Functions">Operators and Functions</a>
 
 </li><li>
-<a href="03.html#Fragment Shader">Fragment Shader</a>
+<a href="03.html#Goraud%20Shading%20in%20Practice">Goraud Shading in Practice</a>
 
-</li></ul>
 </li><li>
-<a href="03.html#With Lambertian Reflection Model">With Lambertian Reflection Model</a>
+<a href="03.html#With%20Phong%20Reflection%20Model">With Phong Reflection Model</a>
 
-</li></ul>
+</li><li>
+<a href="03.html#Vertex%20Shader">Vertex Shader</a>
+
+</li><li>
+<a href="03.html#Light%20Reflection">Light Reflection</a>
+
+</li><li>
+<a href="03.html#Fragment%20Shader">Fragment Shader</a>
+
+</li><li>
+<a href="03.html#With%20Lambertian%20Reflection%20Model">With Lambertian Reflection Model</a>
+
 </li></ul>
 <hr>
 
