--- a/src/Notes/Math/Pre-Calculus/AGAA/09_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_03.html
@@ -404,7 +404,7 @@ An identity for \(\tan \frac{A}{2}\) comes from the half-number identities for s
 \end{align}
 
 \begin{align}
-= \pm sqrt{\frac{\frac{1 - \cos A}{2}}{\frac{1 + \cos A}{2}}} = \pm \sqrt{\frac{1 - \cos A}{1 + \cos A}}
+= \pm \sqrt{\frac{\frac{1 - \cos A}{2}}{\frac{1 + \cos A}{2}}} = \pm \sqrt{\frac{1 - \cos A}{1 + \cos A}}
 \end{align}
 
 <p>
