[RTGW] 03: add explanation about program creation [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/09_03.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_03.html
@@ -226,7 +226,7 @@ From the previous identities we can derive another group of identities. For the 
 </p>
 
 \begin{align}
-\sin A + \sin B = \sin (\frac{2A}{2} + B - B) + \sin (\frac{2B}{2} + A - A)
+\sin A + \sin B = \sin (\frac{2A}{2} + \frac{B - B}{2}) + \sin (\frac{2B}{2} + \frac{A - A}{2})
 \end{align}
 
 \begin{align}
@@ -238,7 +238,7 @@ If \(x = \frac{A + B}{2}\) and \(y = \frac{A - B}{2}\), then
 </p>
 
 \begin{align}
-= 2 [\frac{1}{2} \sin (x + y) + \sin (x - y)]
+= \sin (x + y) + \sin (x - y)
 \end{align}
 
 <p>
@@ -254,7 +254,7 @@ For the difference of sines we have:
 </p>
 
 \begin{align}
-\sin A - \sin B = \sin (\frac{2A}{2} + B - B) - \sin (\frac{2B}{2} + A - A)
+\sin A - \sin B = \sin (\frac{2A}{2} + \frac{B - B}{2}) - \sin (\frac{2B}{2} + \frac{A - A}{2})
 \end{align}
 
 \begin{align}
@@ -266,7 +266,7 @@ If \(x = \frac{A + B}{2}\) and \(y = \frac{A - B}{2}\), then
 </p>
 
 \begin{align}
-= 2 \frac{1}{2} [\sin (x + y) - \sin (x - y)]
+= \sin (x + y) - \sin (x - y)
 \end{align}
 
 <p>
@@ -282,7 +282,7 @@ For the sum of cosines we have:
 </p>
 
 \begin{align}
-\cos A + \cos B = \cos (\frac{2A}{2} + B - B) + \cos (\frac{2B}{2} + A - A)
+\cos A + \cos B = \cos (\frac{2A}{2} + \frac{B - B}{2}) + \cos (\frac{2B}{2} + \frac{A - A}{2})
 \end{align}
 
 \begin{align}
@@ -294,7 +294,7 @@ If \(x = \frac{A + B}{2}\) and \(y = \frac{A - B}{2}\), then
 </p>
 
 \begin{align}
-= 2 \frac{1}{2}[\cos (x + y) + \cos (x - y)]
+= 2 \cos (x + y) + \cos (x - y)
 \end{align}
 
 <p>
@@ -310,7 +310,7 @@ For the difference of cosines we have:
 </p>
 
 \begin{align}
-\cos A - \cos B = \cos (\frac{2A}{2} + B - B) - \cos (\frac{2B}{2} + A - A)
+\cos A - \cos B = \cos (\frac{2A}{2} + \frac{B - B}{2}) - \cos (\frac{2B}{2} + \frac{A - A}{2})
 \end{align}
 
 \begin{align}
@@ -322,11 +322,7 @@ If \(x = \frac{A + B}{2}\) and \(y = \frac{A - B}{2}\), then
 </p>
 
 \begin{align}
-= 2 \frac{1}{2} [\cos (x + y) - \cos (x - y)]
-\end{align}
-
-\begin{align}
-= -2 \frac{1}{2} [\cos (x - y) - \cos (x + y)]
+= \cos (x + y) - \cos (x - y)
 \end{align}
 
 <p>
@@ -340,7 +336,7 @@ By the product to sum identity we have:
 <div id="Further Identities-Half-Number Identities"><h2 id="Half-Number Identities" class="header"><a href="#Further Identities-Half-Number Identities">Half-Number Identities</a></h2></div>
 
 <p>
-We derive identities for \(\sin \frac{A}{2}\), \(\cos{A}{2}\) and \(\tan{A}{2}\). These are known as <span id="Further Identities-Half-Number Identities-half-number identities"></span><strong id="half-number identities">half-number identities</strong>, or <span id="Further Identities-Half-Number Identities-half-angle identities"></span><strong id="half-angle identities">half-angle identities</strong>.
+We derive identities for \(\sin \frac{A}{2}\), \(\cos \frac{A}{2}\) and \(\tan \frac{A}{2}\). These are known as <span id="Further Identities-Half-Number Identities-half-number identities"></span><strong id="half-number identities">half-number identities</strong>, or <span id="Further Identities-Half-Number Identities-half-angle identities"></span><strong id="half-angle identities">half-angle identities</strong>.
 </p>
 
 <p>
