--- a/src/Notes/ComputerScience/CG/RTGW/03.html
+++ b/src/Notes/ComputerScience/CG/RTGW/03.html
@@ -121,6 +121,9 @@
 </li><li>
 <a href="03.html#Phong%20Shading%20with%20Phong%20Lighting%20in%20Practice">Phong Shading with Phong Lighting in Practice</a>
 
+</li><li>
+<a href="03.html#How%20To%20Create%20a%20Program">How To Create a Program</a>
+
 </li></ul>
 <hr>
 
@@ -804,6 +807,244 @@ void main(void) {
   fragColor = vec4(vec3(Ia + Id + Is), 1.0);
 }
 </pre>
+
+<div id="Lights-How To Create a Program"><h2 id="How To Create a Program" class="header"><a href="#Lights-How To Create a Program">How To Create a Program</a></h2></div>
+
+<p>
+We need to take a look at how we create a program using our WebGL context. Let's take a look at the structure of the web apps we have developed so far:
+</p>
+
+<p>
+<img src="https://albamr09.github.io/public/assets/wegl_program_flow.png" alt="WebGL Program Flow" style="height:400px">
+</p>
+
+<p>
+In this section, we will take a closer look at the <code>initProgram</code> function which allows us to create and compile an ESSL program.
+</p>
+
+<p>
+Let's take a step-by-step look at <code>initProgram</code>:
+</p>
+
+<pre javascript="">const initProgram = () =&gt; {
+  gl.clearColor(0.5, 0.5, 0.5, 1);
+  gl.enable(gl.DEPTH_TEST);
+  program = createProgram(
+    gl,
+    vertexShaderSource,
+    fragmentShaderSource
+  );
+}
+</pre>
+
+<p>
+Where <code>createProgram</code> is defined as follows:
+</p>
+
+<pre javascript="">/**
+ * Creates a program that is made up of a vertex shader and a fragment shader
+ */
+
+export const createProgram = (
+  gl: WebGL2RenderingContext,
+  vertexShaderSource: string,
+  fragmentShaderSource: string
+) =&gt; {
+  // Obtain the shaders
+  const vertexShader = compileShader(
+    gl,
+    PROGRAM_TYPE.VERTEX,
+    vertexShaderSource
+  );
+  const fragmentShader = compileShader(
+    gl,
+    PROGRAM_TYPE.FRAGMENT,
+    fragmentShaderSource
+  );
+
+  // Create a program
+  const program = gl.createProgram();
+  if (!program || !vertexShader || !fragmentShader) {
+    throw "Could no create program";
+  }
+
+  // Attach the shaders to this program
+  gl.attachShader(program, vertexShader);
+  gl.attachShader(program, fragmentShader);
+  gl.linkProgram(program);
+
+  if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+    throw "Could not initialize shaders";
+  }
+
+  // Use this program instance
+  gl.useProgram(program);
+
+  return program;
+};
+</pre>
+
+<p>
+We use <code>compileShader</code> function to retrieve the contents of the vertex shader and the fragment shader, both source codes are compiled inside this function. The program's creation is done by calling <code>createProgram</code>, <code>attachShader</code> and <code>linkProgram</code>.
+</p>
+
+<pre javascript="">/**
+ * Compiles the vertex or fragment shader
+ */
+export const compileShader = (
+  gl: WebGL2RenderingContext,
+  type: PROGRAM_TYPE,
+  source: string
+) =&gt; {
+  let shader: WebGLShader | null;
+  if (type === PROGRAM_TYPE.VERTEX) {
+    shader = gl.createShader(gl.VERTEX_SHADER);
+  } else {
+    shader = gl.createShader(gl.FRAGMENT_SHADER);
+  }
+
+  if (!shader) return;
+
+  gl.shaderSource(shader, source);
+  gl.compileShader(shader);
+
+  if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
+    console.error(gl.getShaderInfoLog(shader));
+    return null;
+  }
+
+  return shader;
+};
+</pre>
+
+<table>
+<thead>
+<tr>
+<th>
+WebGL Function
+</th>
+<th>
+Description
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<code>createProgram()</code>
+</td>
+<td>
+Creates a new program (<code>program</code>)
+</td>
+</tr>
+<tr>
+<td>
+<code>attachShader(program, shader)</code>
+</td>
+<td>
+Attaches a shader to the current program
+</td>
+</tr>
+<tr>
+<td>
+<code>linkProgram(program)</code>
+</td>
+<td>
+Creates executable versions of the vertex and fragment shaders that are passed to the GPU.
+</td>
+</tr>
+<tr>
+<td>
+<code>getProgramParameter(program, parameter)</code>
+</td>
+<td>
+It allows you to query the program parameters. We use this function to verify whether the program has been successfully linked
+</td>
+</tr>
+<tr>
+<td>
+<code>useProgram(program)</code>
+</td>
+<td>
+It will load the program onto the GPU if the program contains valid code (that is, it has been successfully linked)
+</td>
+</tr>
+</tbody>
+</table>
+
+<p>
+We also create a mapping for the attributes and the uniforms:
+</p>
+
+<pre javascript="">program.aPosition = gl.getAttribLocation(program, "aPosition");
+program.aNormal = gl.getAttribLocation(program, "aNormal");
+program.uModelViewMatrix = gl.getUniformLocation(program, "uModelViewMatrix");
+program.uProjectionMatrix = gl.getUniformLocation(
+  program,
+  "uProjectionMatrix"
+);
+program.uNormalMatrix = gl.getUniformLocation(program, "uNormalMatrix");
+program.uMaterialAmbientColor = gl.getUniformLocation(
+  program,
+  "uMaterialAmbientColor"
+);
+program.uMaterialDiffuseColor = gl.getUniformLocation(
+  program,
+  "uMaterialDiffuseColor"
+);
+program.uMaterialSpecularColor = gl.getUniformLocation(
+  program,
+  "uMaterialSpecularColor"
+);
+program.uLightAmbientColor = gl.getUniformLocation(
+  program,
+  "uLightAmbientColor"
+);
+program.uLightDiffuseColor = gl.getUniformLocation(
+  program,
+  "uLightDiffuseColor"
+);
+program.uLightSpecularColor = gl.getUniformLocation(
+  program,
+  "uLightSpecularColor"
+);
+program.uLightDirection = gl.getUniformLocation(program, "uLightDirection");
+program.uShininess = gl.getUniformLocation(program, "uShininess");
+</pre>
+
+<p>
+Here, we have used the following WebGL API functions:
+</p>
+<table>
+<thead>
+<tr>
+<th>
+WebGL Function
+</th>
+<th>
+Description
+</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>
+<code>getAttribLocation(program, name)</code>
+</td>
+<td>
+This function receives the current program object and a string that contains the name of the attribute that needs to be retrieved. This function then returns a <span id="Lights-How To Create a Program-reference"></span><strong id="reference">reference</strong> to the <span id="Lights-How To Create a Program-respective attribute"></span><strong id="respective attribute">respective attribute</strong>.
+</td>
+</tr>
+<tr>
+<td>
+<code>getUniformLocation(program, name)</code>
+</td>
+<td>
+This function receives the current program object and a string that contains the name of the uniform that needs to be retrieved. This function then returns a <span id="Lights-How To Create a Program-reference"></span><strong id="reference">reference</strong> to the <span id="Lights-How To Create a Program-respective uniform"></span><strong id="respective uniform">respective uniform</strong>.
+</td>
+</tr>
+</tbody>
+</table>
 </div>
   
 
