[AGAA] 09_04: finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -142,6 +142,9 @@ Trigonometric Identities and Equations.
 </li><li>
 <a href="09_03.html">Further Identities</a>
 
+</li><li>
+<a href="09_04.html">The Inverse Circular Functions</a>
+
 </li></ol>
 </li></ol>
 </div>
