[AGAA] 09_04: fix typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/09_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_04.html
@@ -58,7 +58,7 @@
 <div id="The Inverse Circular Functions-Inverse Sine Function"><h2 id="Inverse Sine Function" class="header"><a href="#The Inverse Circular Functions-Inverse Sine Function">Inverse Sine Function</a></h2></div>
 
 <p>
-Applying the horizontal line test, we see that \(y = \sin x\) does not define a one-to-one function. If we restrict the domain to the interval \(\[-\frac{\pi}{2}, \frac{\pi}{2}\]\) the function is one-to-one and has an inverse function. See FIGURE 16:
+Applying the horizontal line test, we see that \(y = \sin x\) does not define a one-to-one function. If we restrict the domain to the interval \([-\frac{\pi}{2}, \frac{\pi}{2}]\) the function is one-to-one and has an inverse function. See FIGURE 16:
 </p>
 
 <p>
@@ -66,13 +66,13 @@ Applying the horizontal line test, we see that \(y = \sin x\) does not define a 
 </p>
 
 <p>
-\(y = \sin^{-1} x\) or \(y = \arcsin x\) means that \(x = sin y\), for \(-\frac{\pi}{2} \leq y \leq \frac{\pi}{2}\)
+\(y = \sin^{-1} x\) or \(y = \arcsin x\) means that \(x = \sin y\), for \(-\frac{\pi}{2} \leq y \leq \frac{\pi}{2}\)
 </p>
 
 <div id="The Inverse Circular Functions-Inverse Cosine Function"><h2 id="Inverse Cosine Function" class="header"><a href="#The Inverse Circular Functions-Inverse Cosine Function">Inverse Cosine Function</a></h2></div>
 
 <p>
-The function \(y = \cos^{-1} x\) (or \(y = \arccos x\)) is defined by restricting the domain of the function to the interval \(\[0, \pi\]\), as in FIGURE 19. The graph of \(y = cos^{-1} x\) is shown in FIGURE 20.
+The function \(y = \cos^{-1} x\) (or \(y = \arccos x\)) is defined by restricting the domain of the function to the interval \([0, \pi]\), as in FIGURE 19. The graph of \(y = \cos^{-1} x\) is shown in FIGURE 20.
 </p>
 
 <p>
@@ -80,7 +80,7 @@ The function \(y = \cos^{-1} x\) (or \(y = \arccos x\)) is defined by restrictin
 </p>
 
 <p>
-\(y = cos^{-1} x\) or \(y = \arccos x\) means that \(x = \cos y\), for \(0 \leq y \leq \pi\).
+\(y = \cos^{-1} x\) or \(y = \arccos x\) means that \(x = \cos y\), for \(0 \leq y \leq \pi\).
 </p>
 
 <div id="The Inverse Circular Functions-Inverse Tangent Function"><h2 id="Inverse Tangent Function" class="header"><a href="#The Inverse Circular Functions-Inverse Tangent Function">Inverse Tangent Function</a></h2></div>
@@ -94,19 +94,19 @@ Restricting the domain of the function \(y = \tan x\) to the open interval \((-\
 </p>
 
 <p>
-\(y = tan^{-1} x\) or \(y = \arctan x\) means \(x = \tan y\), for \(-\frac{\pi}{2} &lt; y &lt; \frac{\pi}{2}\)
+\(y = \tan^{-1} x\) or \(y = \arctan x\) means \(x = \tan y\), for \(-\frac{\pi}{2} &lt; y &lt; \frac{\pi}{2}\)
 </p>
 
 <div id="The Inverse Circular Functions-Other Inverse Trigonometric Functions"><h2 id="Other Inverse Trigonometric Functions" class="header"><a href="#The Inverse Circular Functions-Other Inverse Trigonometric Functions">Other Inverse Trigonometric Functions</a></h2></div>
 
 <p>
-\(y = \cot^{-1} x\) or \(y = \arccot x\) means that \(x = \cot y\), for \(0 &lt; y &lt; \pi\).
-\(y = \sec^{-1} x\) or $\(y = \arcsec x means that \)x = \sec y\(, for \)0 \leq y \leq \pi, y \neq \frac{\pi}{2}$.
-\(y = \csc^{-1} x\) or \(y = \arccsc x\) means that \(x = \csc y\), for \(-\frac{\pi}{2} \leq y \leq \frac{\pi}{2}, y \neq 0\)
+\(y = \cot^{-1} x\) or \(y = \arc\cot x\) means that \(x = \cot y\), for \(0 &lt; y &lt; \pi\).
+\(y = \sec^{-1} x\) or \(y = \arc\sec x\) means that \(x = \sec y\), for \(0 \leq y \leq \pi, y \neq \frac{\pi}{2}\).
+\(y = \csc^{-1} x\) or \(y = \arc\csc x\) means that \(x = \csc y\), for \(-\frac{\pi}{2} \leq y \leq \frac{\pi}{2}, y \neq 0\)
 </p>
 
 <p>
-Finding \(\cot^{-1} x\), \(\sec^{-1} x\), and \(\csc^{-1} x\) can be achieved by expressing these functions in terms of \(\tan^{-1} x\), \(\cos{-1} x\) and \(sin^{-1} x\).
+Finding \(\cot^{-1} x\), \(\sec^{-1} x\), and \(\csc^{-1} x\) can be achieved by expressing these functions in terms of \(\tan^{-1} x\), \(\cos{-1} x\) and \(\sin^{-1} x\).
 </p>
 
 <p>
