[AGAA] 09_04: fix more typos [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/09_04.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/09_04.html
@@ -100,9 +100,9 @@ Restricting the domain of the function \(y = \tan x\) to the open interval \((-\
 <div id="The Inverse Circular Functions-Other Inverse Trigonometric Functions"><h2 id="Other Inverse Trigonometric Functions" class="header"><a href="#The Inverse Circular Functions-Other Inverse Trigonometric Functions">Other Inverse Trigonometric Functions</a></h2></div>
 
 <p>
-\(y = \cot^{-1} x\) or \(y = \arc\cot x\) means that \(x = \cot y\), for \(0 &lt; y &lt; \pi\).
-\(y = \sec^{-1} x\) or \(y = \arc\sec x\) means that \(x = \sec y\), for \(0 \leq y \leq \pi, y \neq \frac{\pi}{2}\).
-\(y = \csc^{-1} x\) or \(y = \arc\csc x\) means that \(x = \csc y\), for \(-\frac{\pi}{2} \leq y \leq \frac{\pi}{2}, y \neq 0\)
+\(y = \cot^{-1} x\) or \(y = arc\cot x\) means that \(x = \cot y\), for \(0 &lt; y &lt; \pi\).
+\(y = \sec^{-1} x\) or \(y = arc\sec x\) means that \(x = \sec y\), for \(0 \leq y \leq \pi, y \neq \frac{\pi}{2}\).
+\(y = \csc^{-1} x\) or \(y = arc\csc x\) means that \(x = \csc y\), for \(-\frac{\pi}{2} \leq y \leq \frac{\pi}{2}, y \neq 0\)
 </p>
 
 <p>
