[AGAA] 10_01 finish notes [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/index.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/index.html
@@ -146,6 +146,14 @@ Trigonometric Identities and Equations.
 <a href="09_04.html">The Inverse Circular Functions</a>
 
 </li></ol>
+</li><li>
+Applications of Trigonometry and Vectors
+
+<ol>
+<li>
+<a href="10_01.html">The Law of Sines</a>
+
+</li></ol>
 </li></ol>
 </div>
   
