[RTGW] fix TOC structure [skip ci]

--- a/src/Notes/Math/Pre-Calculus/AGAA/10_01.html
+++ b/src/Notes/Math/Pre-Calculus/AGAA/10_01.html
@@ -98,7 +98,7 @@ Cases 1 and 2 require the <span id="The Law of Sines-Congruency and Oblique Tria
 <div id="The Law of Sines-Derivation of the Law of Sines"><h2 id="Derivation of the Law of Sines" class="header"><a href="#The Law of Sines-Derivation of the Law of Sines">Derivation of the Law of Sines</a></h2></div>
 
 <p>
-Given an acute triangle (Figure 1(a)) or an obtuse triangle (Figure 1(b)). We construct the perpenciular from \(B\) to side \(AC\). Let \(h\) be the length of the perpendicular. 
+Given an acute triangle (Figure 1(a)) or an obtuse triangle (Figure 1(b)). We construct the perpendicular from \(B\) to side \(AC\). Let \(h\) be the length of the perpendicular. 
 </p>
 
 <p>
